--- a/Home.html
+++ b/Home.html
@@ -33,7 +33,7 @@
         }
 
         body {
-            background-image: url("images/banner-made.jpg");
+            background-image: url("banner-made.jpg");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
