--- a/ContactUs.html
+++ b/ContactUs.html
@@ -28,7 +28,7 @@
         }
 
         body {
-            background-image: url("images/contactus1.jpg");
+            background-image: url("contactus1.jpg");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
