--- a/Feedback.html
+++ b/Feedback.html
@@ -44,7 +44,7 @@
         }
 
         body {
-            background-image: url("images/feedbackimg.png");
+            background-image: url("feedbackimg.png");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
