--- a/Syrups.html
+++ b/Syrups.html
@@ -46,7 +46,7 @@
         }
 
         body {
-            background-image: url("images/r.jpg");
+            background-image: url("r.jpg");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
