--- a/Tablets.html
+++ b/Tablets.html
@@ -57,7 +57,7 @@
         }
 
         body {
-            background-image: url("images/tb.jpg");
+            background-image: url("tb.jpg");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
