--- a/message1.html
+++ b/message1.html
@@ -28,7 +28,7 @@
         }
 
         body {
-            background-image: url("images/thanks.jpg");
+            background-image: url("thanks.jpg");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
