--- a/purchase.html
+++ b/purchase.html
@@ -44,7 +44,7 @@
         }
 
         body {
-            background-image: url("images/order.jpg");
+            background-image: url("order.jpg");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
