--- a/ordersuccess.html
+++ b/ordersuccess.html
@@ -28,7 +28,7 @@
         }
 
         body {
-            background-image: url("images/delivere.jpg");
+            background-image: url("delivere.jpg");
             background-attachment: scroll;
             background-repeat: no-repeat;
             background-size: 1550px 600px;
