--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
         my medical shop .com.<br><br><br><br></div>
 
     <div style="float:left;">
-        <img src="images/info1.jpg" height="300px" width="500px" 1>
+        <img src="info1.jpg" height="300px" width="500px" 1>
     </div>
     <h2 style="color: green;">About Tablets</h2>
 
@@ -113,7 +113,7 @@
     <br><br><br><br><br><br><br><br><br><br><br><br>
 
     <div style="float:right;">
-        <img src="images/sy3.jpg" height="300px" width="500px" 1>
+        <img src="info2.jpg" height="300px" width="500px" 1>
     </div>
     <h2 style="color: green;">About Syrups</h2>
     <p style="font-size:20px ;">
