--- a/Tablets.html
+++ b/Tablets.html
@@ -83,7 +83,7 @@
         <ul class="image-list">
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine1.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine1.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -91,7 +91,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine2.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine2.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -99,7 +99,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine3.webp" hspace="20" width="190px" height="120px">
+                    <img src="medicine3.jpg" hspace="20" width="190px" height="120px">
                     <p style="color: white;">Crosin<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br> cold
                         symptoms.<br>10 tablets in a packet<br>100 &#x20b9;</p>
@@ -107,7 +107,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine4.png" hspace="20" width="200px" height="120px">
+                    <img src="medicine4.png" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Nurtec OTD<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>80 &#x20b9;</p>
@@ -115,7 +115,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine5.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine5.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Anadin Extra<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>180 &#x20b9;</p>
@@ -123,7 +123,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine1.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine1.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -131,7 +131,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine2.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine2.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -139,7 +139,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine3.webp" hspace="20" width="190px" height="120px">
+                    <img src="medicine3.jpg" hspace="20" width="190px" height="120px">
                     <p style="color: white;">Crosin<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br> cold
                         symptoms.<br>10 tablets in a packet<br>100 &#x20b9;</p>
@@ -147,7 +147,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine4.png" hspace="20" width="200px" height="120px">
+                    <img src="medicine4.png" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Nurtec OTD<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>80 &#x20b9;</p>
@@ -155,7 +155,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine5.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine5.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Anadin Extra<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>180 &#x20b9;</p>
@@ -163,7 +163,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine1.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine1.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -171,7 +171,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine2.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine2.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -179,7 +179,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine3.webp" hspace="20" width="190px" height="120px">
+                    <img src="medicine3.jpg" hspace="20" width="190px" height="120px">
                     <p style="color: white;">Crosin<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>100 &#x20b9;</p>
@@ -187,7 +187,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine4.png" hspace="20" width="200px" height="120px">
+                    <img src="medicine4.png" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Nurtec OTD<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>80 &#x20b9;</p>
@@ -195,7 +195,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine5.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine5.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Anadin Extra<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>180 &#x20b9;</p>
@@ -203,7 +203,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine1.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine1.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -211,7 +211,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine2.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine2.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -219,7 +219,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine3.webp" hspace="20" width="190px" height="120px">
+                    <img src="medicine3.jpg" hspace="20" width="190px" height="120px">
                     <p style="color: white;">Crosin<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>100 &#x20b9;</p>
@@ -227,7 +227,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine4.png" hspace="20" width="200px" height="120px">
+                    <img src="medicine4.png" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Nurtec OTD<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>80 &#x20b9;</p>
@@ -235,7 +235,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/medicine5.jpg" hspace="20" width="200px" height="120px">
+                    <img src="medicine5.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Anadin Extra<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms.<br>10 tablets in a packet<br>180 &#x20b9;</p>
