--- a/Syrups.html
+++ b/Syrups.html
@@ -75,7 +75,7 @@
     <ul class="image-list-1">
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp1.jpg" hspace="20" width="200px" height="120px">
+                <img src="syp1.jpg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -83,7 +83,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp2.jpeg" hspace="20" width="200px" height="120px">
+                <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -91,7 +91,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp3.jpg" hspace="20" width="200px" height="120px">
+                <img src="syp3.jpg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -99,7 +99,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp4.jpg" hspace="20" width="200px" height="120px">
+                <img src="syp4.jpg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -107,7 +107,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp5.jpeg" hspace="20" width="200px" height="120px">
+                <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -115,7 +115,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp1.jpg" hspace="20" width="200px" height="120px">
+                <img src="syp1.jpg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -123,7 +123,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp2.jpeg" hspace="20" width="200px" height="120px">
+                <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -131,7 +131,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp3.jpg" hspace="20" width="200px" height="120px">
+                <img src="syp3.jpg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -139,7 +139,7 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp4.jpg" hspace="20" width="200px" height="120px">
+                <img src="syp4.jpg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -147,14 +147,14 @@
         </li>
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
-                <img src="images/syp5.jpeg" hspace="20" width="200px" height="120px">
+                <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
                 <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
             </a>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/syp1.jpg" hspace="20" width="200px" height="120px">
+                    <img src="syp1.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -162,7 +162,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/syp2.jpeg" hspace="20" width="200px" height="120px">
+                    <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -170,7 +170,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/syp3.jpg" hspace="20" width="200px" height="120px">
+                    <img src="syp3.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -178,7 +178,7 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/syp4.jpg" hspace="20" width="200px" height="120px">
+                    <img src="syp4.jpg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -186,14 +186,14 @@
             </li>
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="images/syp5.jpeg" hspace="20" width="200px" height="120px">
+                    <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
                     <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                         common<br>
                         cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
                 </a>
                 <li>
                     <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="images/syp1.jpg" hspace="20" width="200px" height="120px">
+                        <img src="syp1.jpg" hspace="20" width="200px" height="120px">
                         <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                             common<br>
                             cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -201,7 +201,7 @@
                 </li>
                 <li>
                     <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="images/syp2.jpeg" hspace="20" width="200px" height="120px">
+                        <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
                         <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                             common<br>
                             cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -209,7 +209,7 @@
                 </li>
                 <li>
                     <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="images/syp3.jpg" hspace="20" width="200px" height="120px">
+                        <img src="syp3.jpg" hspace="20" width="200px" height="120px">
                         <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                             common<br>
                             cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -217,7 +217,7 @@
                 </li>
                 <li>
                     <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="images/syp4.jpg" hspace="20" width="200px" height="120px">
+                        <img src="syp4.jpg" hspace="20" width="200px" height="120px">
                         <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                             common<br>
                             cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
@@ -225,7 +225,7 @@
                 </li>
                 <li>
                     <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="images/syp5.jpeg" hspace="20" width="200px" height="120px">
+                        <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
                         <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
                             common<br>
                             cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
