--- a/Tablets.html
+++ b/Tablets.html
@@ -40,7 +40,7 @@
 
         .image-list li {
             display: inline-block;
-            margin-left: 15px;
+            margin-left: 33px;
             margin-bottom: 15px;
             border: 1px black solid;
 
@@ -77,9 +77,11 @@
     <br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-
+    <br><br><br>
     <div>
+
+        <h2 style="color: green;font-size: 25px;text-align: center;">TABLET'S</h2>
+        <br><br>
         <ul class="image-list">
             <li>
                 <a href="purchase.html" style="text-decoration:none ;">
