--- a/Syrups.html
+++ b/Syrups.html
@@ -30,7 +30,8 @@
 
         .image-list-1 li {
             display: inline-block;
-            margin-left: 10px;
+            margin-left: 33px;
+            margin-bottom: 15px;
             border: 1px black solid;
 
             background-color: darkgray;
@@ -51,6 +52,7 @@
             background-repeat: no-repeat;
             background-size: 1550px 600px;
         }
+
         .b2 {
             color: crimson;
             float: left;
@@ -70,8 +72,10 @@
     </nav>
     <br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <h2 style="color: green;font-size: 25px;text-align: center;">SYRUP'S</h2>
+    <br><br>
     <ul class="image-list-1">
         <li>
             <a href="purchase.html" style="text-decoration:none ;">
@@ -152,86 +156,86 @@
                     common<br>
                     cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
             </a>
-            <li>
-                <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="syp1.jpg" hspace="20" width="200px" height="120px">
-                    <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                        common<br>
-                        cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                </a>
-            </li>
-            <li>
-                <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
-                    <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                        common<br>
-                        cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                </a>
-            </li>
-            <li>
-                <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="syp3.jpg" hspace="20" width="200px" height="120px">
-                    <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                        common<br>
-                        cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                </a>
-            </li>
-            <li>
-                <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="syp4.jpg" hspace="20" width="200px" height="120px">
-                    <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                        common<br>
-                        cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                </a>
-            </li>
-            <li>
-                <a href="purchase.html" style="text-decoration:none ;">
-                    <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
-                    <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                        common<br>
-                        cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                </a>
-                <li>
-                    <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="syp1.jpg" hspace="20" width="200px" height="120px">
-                        <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                            common<br>
-                            cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
-                        <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                            common<br>
-                            cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="syp3.jpg" hspace="20" width="200px" height="120px">
-                        <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                            common<br>
-                            cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="syp4.jpg" hspace="20" width="200px" height="120px">
-                        <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                            common<br>
-                            cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="purchase.html" style="text-decoration:none ;">
-                        <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
-                        <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
-                            common<br>
-                            cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
-                    </a>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp1.jpg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp3.jpg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp4.jpg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp1.jpg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp2.jpeg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp3.jpg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp4.jpg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
+        </li>
+        <li>
+            <a href="purchase.html" style="text-decoration:none ;">
+                <img src="syp5.jpeg" hspace="20" width="200px" height="120px">
+                <p style="color: white;">Paracetamol<br>Description-<br>Cozytab Plus Tablet is<br> used to treat
+                    common<br>
+                    cold symptoms. <br>10 tablets in a packet<br>130 &#x20b9;</p>
+            </a>
     </ul>
-    <ul  style="font-size: 25px;">
+    <ul style="font-size: 25px;">
         <li> <a class="b2" href="home.html">home</a></li>
         <li> <a class="b2" href="Tablets.html">Tablets</a></li>
         <li> <a class="b2" href="Syrups.html">Syrups</a></li>
